# SystemBibliotek

./: Biblioteka.cpp  Biblioteka.h  CMakeLists.txt  Czasopismo.cpp  Czasopismo.h  Czytelnik.cpp  Czytelnik.h  Ksiazka.cpp  Ksiazka.h  Miasto.cpp  Miasto.h  Produkt.cpp  Produkt.h  README.md  ZmienneGlobalne.cpp  ZmienneGlobalne.h  main.cpp
